# transformer

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
src/transformer/: attention.py  block.py  config.py  multi_layer_perceptron.py  tokenizer.py  transformer.py  utils.py
tests/: test_transformer.py
